2002-11-19    <smulloni@smullbola.smullyan.org>

	* test/formlib/htdocs/test3.html: another test.

	* pylibs/formlib/form.py (Form.validate): errors are now kept as
	part of the form's state.  (Form.submit): to submit a form, you
	now call "submit(data)"; it resets and validates for you.

2002-11-18    <smulloni@smullbola.smullyan.org>

	* test/formlib/htdocs/test2.html: second simple test created and
	passed (simple select field and button group).

	* pylibs/formlib/form.py (Field.checkValue, DomainField.checkValue): 
	among several other changes made in debugging, this changes the interface.
	checkValue now returns the value and performs some munging to permit
	'multiple' fields to absorb single values. 

	* pylibs/formlib/views.py: fixed many bugs, mostly out-of-order
	arguments to constructors (now I know why they are called args --
	AAARGH!).

	* test/formlib/htdocs/: created first *very* simple test.

	* pylibs/formlib/views.py (ViewableForm.getView): show descriptions.

	* pylibs/containers/fieldcontainer.py (FieldContainer.__setitem__): fixed
	typo.

	* pylibs/containers/set.py: adding brain-dead set implementation (luckily 
	sets will be part of Python 2.3).

	* pylibs/formlib/views.py, pylibs/formlib/form.py: now reached a point
	where it is possible to test it with simple forms.  Added description field
	to all fields.

2002-11-14    <smulloni@smullbola.smullyan.org>

	* pylibs/formlib/form.py: the field classes are now somewhat reasonable;
	Form isn't there yet.

2002-11-13    <smulloni@smullbola.smullyan.org>

	* SkunkWeb/Services/web/protocol.py (HTTPConnection.extract_args):
	now use argextract.

	* pylibs/formlib/form.py: start of clean-up, using
	fieldcontainer.py. 

	* pylibs/containers/fieldcontainer.py (FieldContainer): added
	a "storelists" property.

	* pylibs/containers/__init__.py: created a package for containers,
	in anticipation of eventually needing to write more of them.

	* pylibs/containers/fieldcontainer.py: adding a hybrid list/dict